Middlewares login i getDades + authorization

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 URL_DB=mongodb+srv://aleupons:ap128@cluster0.dobah.mongodb.net/usuaris?retryWrites=true&w=majority
+JWT_SECRET=4815162342
 DEBUG=usuaris:*
